Refactor using toList instead of Collector in between